add oauth + mockdata
Co-authored-by: Your Name <155871440+thainhat04@users.noreply.github.com>

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,16 +1,23 @@
-# Application
-NODE_ENV=development
-PORT=3001
+# Server Configuration
+PORT=8080
 APP_NAME=Mailbox AI Backend
+NODE_ENV=development
 
-# Database
-DATABASE_URL=postgresql://user:password@localhost:5432/mailbox_db?schema=public
+# Database Configuration
+DATABASE_URL=
 
-# JWT
+# JWT Configuration
 JWT_SECRET=your-super-secret-jwt-key-change-this-in-production
 JWT_ACCESS_EXPIRATION=60m
 JWT_REFRESH_SECRET=your-super-secret-refresh-key-change-this-in-production
 JWT_REFRESH_EXPIRATION=30d
+ONE_TIME_TOKEN_SECRET=dev-super-secret-one-time-token-key-change-in-production
+REFRESH_TOKEN_GRACE_PERIOD_SECONDS=3
+
+# OAuth Configuration - Google
+GOOGLE_CLIENT_ID=
+GOOGLE_CLIENT_SECRET=
+GOOGLE_CALLBACK_URL=
 
 # Swagger
 SWAGGER_ENABLED=true
